add zimbabwe to country select options

--- a/hurumap_global/templates/homepage.html
+++ b/hurumap_global/templates/homepage.html
@@ -32,6 +32,7 @@
                     <option value="tanzania.hurumap.org">Tanzania</option>
                     <option value="uganda.hurumap.org">Uganda</option>
                     <option value="zambia.hurumap.org">Zambia</option>
+                    <option value="zimbabwe.hurumap.org">Zimbabwe</option>
                 </select>
             </p>
             <p>
@@ -108,7 +109,11 @@
             },{
                 name: 'Zambia',
                 url: 'http://zambia.hurumap.org'
+            },{
+                name: 'Zimbabwe',
+                url: 'https://zimbabwe.hurumap.org'
             }
+
         ];
 
         // If not really there
@@ -137,4 +142,3 @@
 
     </script>
 {% endblock %}
-
