--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -38,15 +38,15 @@ download data, and embed charts on your site.{% endblock %}
     <h3>Visualize</h3>
     <p>Our library of charts gives you insight into land data from provinces you research. Look for them on profile pages. You can embed the charts on your own site. </p>
   </div>
-  <div class="column-third">
+  <div class="column-third-end">
     <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
     <h3>Get Context</h3>
     <p>Pre-computed land statistics are presented alongside each data point so you can see how each place fits into a large context.</p>
   </div>
 </div>
-<div class="wrapper">
-  <br/><br/>
-  <p><a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a></p>
+<div class="clearfix"></div>
+<div class="wrapper" style="margin: 30px auto;">
+  <a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a>
 </div>
 {% endblock %}
 
