--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -1,4 +1,4 @@
-/* 
+/*
  * HURUmap Land SCSS
  * -----------------
  * Customizations for HURUmap Land site
@@ -8,9 +8,12 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
+$brand-color-solid-green: #279c94;
+$font-raleway: 'Raleway', sans-serif;
+
 // Heading font
 h1 {
-  font-family: 'Raleway', sans-serif;
+  font-family: $font-raleway;
   font-weight: 700;
   font-size: 3em;
 }
@@ -19,10 +22,32 @@ h1 {
 
 // Fonts
 .font-raleway {
-  font-family: 'Raleway', sans-serif;
+  font-family: $font-raleway;
 }
 .font-weight-bold {
   font-weight: 700;
+}
+
+// Colors
+.bg-color-gradient {
+  background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92) !important;
+}
+.bg-color-solid-green {
+  background-color: $brand-color-solid-green;
+}
+
+// Text
+.text-white {
+    color: white;
+}
+.text-primary {
+  color: #084a49;
+}
+.text-uppercase {
+  text-transform: uppercase;
+}
+.text-center {
+  text-align: center;
 }
 
 // Rounded radius
@@ -36,12 +61,26 @@ span.img-bg {
   padding: 24px;
 }
 
+// Section containers
+.section-container {
+  background-color: #fff;
+  border-top: 2px solid #aed4df
+}
+.section-title-icon {
+  img {
+    margin-bottom: 5px;
+  }
+}
+
+
+// Global Components
 
 // Footer
-
 #page-footer img {
   max-width: 200px;
 }
+
+// Pages
 
 // Homepage
 
@@ -52,25 +91,66 @@ span.img-bg {
   }
 }
 
-// Stories Showcase
-.showcase.stories {
-  .img {
+// Stories
+.showcase-stories {
+  top: -60px;
+  position: relative;
+  padding: 15px;
+  max-width: 1024px;
+  margin: 0 auto;
+
+  hr {
+    border-color: #aed4df;
+    border-top-width: 2px;
+    margin: 2em 0;
+  }
+
+  .img-bg {
+    font-size:12px;
+     img {
+       max-width: 30px;
+     }
+  }
+
+  a {
+    text-decoration: none;
+  }
+  .showcase-story {
+    position: relative;
+    text-decoration: none;
+
+    padding: 20px;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    min-height: 250px;
+
     display: flex;
-    height: auto;
-    min-height: 200px;
-    padding: 15px 15px;
+    flex-direction: column;
+
     h2 {
-      display: inline-block;
-      width: 100%;
-      max-width: 400px;
-      margin: auto auto 0;
-      padding: 5px 10px;
-
-      background-color: #1c9d95;
+      margin: auto auto 10px;
+      max-width: 300px;
       color: #fff;
-
-      text-transform: uppercase;
-      text-align: center;
+      padding: 10px;
+      font-family: $font-raleway;
+      font-weight: 700;
     }
+
+    button {
+      border-radius: 24px;
+      padding: .6rem 1.25rem;
+      max-width: 140px;
+      margin: 0 auto;
+      text-overflow: ellipsis;
+      font-size: 13px;
+      font-weight: bold;
+      border: 0px;
+      font-family: $font-raleway;
+    }
+  
   }
 }
+
