--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -3,8 +3,8 @@
     <div class="showcase-partners wrapper text-center">
       <p class="section-title-icon">
         <span class="img-bg rounded bg-color-gradient text-white">
-          <img src="{% static 'img/icons/blurbs/group.png' %}"/>
-          <br/>PARTNERS
+          <img src="{% static 'img/icons/blurbs/group.svg' %}"/>
+          PARTNERS
         </span>
       </p>
       <h1 class="section-title text-primary" style="margin-bottom: 15px;">Partners</h1>
