--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -3,8 +3,8 @@
   <div class="showcase-stories wrapper">
     <p class="section-title-icon">
       <span class="img-bg rounded bg-color-gradient text-white">
-        <img src="{% static 'img/icons/blurbs/story.svg' %}"/>
-        <br/>STORIES
+        <img src="{% static 'img/icons/blurbs/script.svg' %}"/>
+        STORIES
       </span>
     </p>
 
