--- a/hurumap_land/static/css/hurumap_land.scss
+++ b/hurumap_land/static/css/hurumap_land.scss
@@ -8,6 +8,7 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
+$brand-color-primary: #0e4a48;
 $brand-color-light-green: #b6d9e2;
 $brand-color-solid-light-green: #269c94;
 $brand-color-solid-green: #279c94;
@@ -29,6 +30,16 @@ h1 {
 }
 .font-weight-bold {
   font-weight: 700;
+}
+.text-primary {
+  color: $brand-color-primary
+}
+.text-white {
+  color: white;
+}
+
+.bg-color-gradient {
+  background-image: linear-gradient(to right, #0e4b49, #16635f, #269a92);
 }
 
 // Colors
@@ -62,16 +73,41 @@ h1 {
 span.img-bg {
   display: inline-block;
   padding: 24px;
+  font-size:12px;
+}
+
+.text-uppercase {
+  text-transform: uppercase!important;
 }
 
 // Section containers
 .section-container {
   background-color: #fff;
-  border-top: 2px solid #aed4df
+  border-top: 2px solid #aed4df;
+  .wrapper {
+    top: -60px;
+    position: relative;
+    padding: 15px 30px 0px;
+    max-width: 1024px;
+    margin: 0 auto;
+  }
 }
 .section-title-icon {
+  font-size:12px;
+  display: flex;
+  justify-content: center;
+  span {
+    height: 110px;
+    width: 110px;
+    padding: 20px 20px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   img {
     margin-bottom: 5px;
+    max-width: 30px;
   }
 }
 
@@ -144,23 +180,10 @@ span.img-bg {
 
 // Stories
 .showcase-stories {
-  top: -60px;
-  position: relative;
-  padding: 15px 30px 0px;
-  max-width: 1024px;
-  margin: 0 auto;
-
   hr {
     border-color: #aed4df;
     border-top-width: 2px;
     margin: 2em 0;
-  }
-
-  .img-bg {
-    font-size:12px;
-     img {
-       max-width: 30px;
-     }
   }
 
   a {
@@ -203,4 +226,11 @@ span.img-bg {
     }
   
   }
+}
+
+// Partners
+.showcase-partners .logos img {
+  margin: 10px 20px;
+  max-width: 150px;
+  max-height: 70px;
 }
