--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -36,10 +36,9 @@ download data, and embed charts on your site.{% endblock %}
         <p>{{ HURUMAP.name }} gives journalist and civic activists
           useful facts and data about land ownership in South Africa</p>
         <a class="btn btn-primary btn-sm text-uppercase font-weight-light"
-        href="{{HURUMAP.url}}/profiles/country-ZA-south-africa/">
+            href="/profiles/country-ZA-south-africa/">
           EXPLORE SOUTH AFRICA
           <img class="border-0" src="{% static 'img/icons/blurbs/button-arrow.svg' %}"
-            alt="button arrow"
             style="height:15px; width: 18px; box-shadow: none; object-fit: contain;">
         </a>
       </div>
