--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -1,6 +1,6 @@
 {% load sass_tags static %}
-<div class="section-container clearfix">
-    <div class="showcase-partners wrapper text-center">
+<div id="partners" class="section-container clearfix">
+    <div class="showcase-partners wrapper text-center {{ extra_css_class }}">
       <p class="section-title-icon">
         <span class="img-bg rounded bg-color-gradient text-white">
           <img src="{% static 'img/icons/blurbs/group.svg' %}"/>
