--- a/hurumap_land/templates/blocks/showcase.html
+++ b/hurumap_land/templates/blocks/showcase.html
@@ -1,6 +1,6 @@
 {% load sass_tags static %}
 <div class="section-container text-center">
-  <div class="showcase-stories wrapper">
+  <div id="showcase-stories" class="showcase-stories wrapper {{ extra_css_class }}">
     <p class="section-title-icon">
       <span class="img-bg rounded bg-color-gradient text-white">
         <img src="{% static 'img/icons/blurbs/script.svg' %}"/>
