--- a/hurumap_land/templates/homepage.html
+++ b/hurumap_land/templates/homepage.html
@@ -49,7 +49,7 @@ download data, and embed charts on your site.{% endblock %}
       <ul>
         <li class="section-title-icon"><a href='/about'>
           <span class="img-bg rounded bg-color-gradient text-white">
-            <img src="{% static 'img/icons/blurbs/papyrus.svg' %}"/>
+            <img src="{% static 'img/icons/blurbs/idea.svg' %}"/>
             ABOUT
           </span>
         </a></li>
@@ -81,24 +81,24 @@ download data, and embed charts on your site.{% endblock %}
         <h1>How It Works</h1>
         <br/>
         <div class="column-third">
-          <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/checklist.svg' %}"/></span></p>
-          <h3>Find Facts</h3>
+          <p><img src="{% static 'img/icons/blurbs/checklist.svg' %}"/></p>
+          <h2>Find Facts</h2>
           <p>Land ownership data is broken down by province and category: agricultural land, erven and urban land and sectional title land. </p>
         </div>
         <div class="column-third">
-          <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/analysis.svg' %}"/></span></p>
-          <h3>Visualize</h3>
+          <p><img src="{% static 'img/icons/blurbs/analysis.svg' %}"/></p>
+          <h2>Visualize</h2>
           <p>Our library of charts gives you insight into land data from provinces you research. Look for them on profile pages. You can embed the charts on your own site. </p>
         </div>
         <div class="column-third-end">
-          <p><span class="img-bg rounded bg-color-primary"><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></span></p>
-          <h3>Get Context</h3>
+          <p><img src="{% static 'img/icons/blurbs/visualization.svg' %}"/></p>
+          <h2>Get Context</h2>
           <p>Pre-computed land statistics are presented alongside each data point so you can see how each place fits into a large context.</p>
         </div>
       </div>
       <div class="clearfix"></div>
       <div class="wrapper" style="margin: 30px auto;">
-        <a href="/help" class="btn btn-lg bg-bottle-green">Learn more</a>
+        <a href="/about" class="btn btn-lg bg-bottle-green">Learn more</a>
       </div>
     {% endblock %}
   </div>
@@ -112,6 +112,8 @@ download data, and embed charts on your site.{% endblock %}
 {% block homepage_javascripb_libs %}
   {{ block.super }}
   <script src="{% static 'js/maps_mapit.js' %}"></script>
+
+  <!-- Background Image Interactivity -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       $('.img-bg').on('click', function () {
