--- a/hurumap_land/templates/about.html
+++ b/hurumap_land/templates/about.html
@@ -9,7 +9,7 @@
 
         <p>{{ HURUMAP.name }} {{ HURUMAP.description }}</p>
 
-        <p>{{ HURUmap.name }} provides useful facts and
+        <p>{{ HURUMAP.name }} provides useful facts and
         data about land ownership in South Africa. Compare places using tables and maps,
          download data, and embed charts on your site</p>
         {% include 'blocks/about/manifesto.html' %}
