--- a/hurumap_land/templates/blocks/partners.html
+++ b/hurumap_land/templates/blocks/partners.html
@@ -8,25 +8,31 @@
         </span>
       </p>
       <h1 class="section-title text-primary" style="margin-bottom: 15px;">Partners</h1>
-      <p class="text-primary">
+      <p class="text-primary" style="margin-bottom: 30px;">
         {{ HURUMAP.name }} is made possible through support from the following partners
       </p>
       <div class="logos">
-        <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener noreferrer">
-          <img src="{{ STATIC_URL }}img/logos/landbou.png" alt="Landbou" style="max-height: 50px;"/>
-        </a>
-        <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener noreferrer">
-          <img src="{{ STATIC_URL }}img/logos/rapport.jpg" alt="Rapport" style="max-height: 50px;"/>
+        <a href="https://city-press.news24.com/News/land-cleveage-and-conflict-20180621" target="_blank" rel="noopener noreferrer">
+          <img src="{{ STATIC_URL }}img/logos/ourland-green.png" alt="Our Land / Ons Grond"/>
         </a>
         <a href="https://codeforafrica.org/" target="_blank" rel="noopener noreferrer">
-          <img src="{{ STATIC_URL }}img/logos/cfafrica.png" alt="Code for Africa"/>
+          <img src="{{ STATIC_URL }}img/logos/cfafrica-green.png" alt="Code for Africa"/>
+        </a>
+        <a href="https://pulitzercenter.org/" target="_blank" rel="noopener noreferrer">
+          <img src="{{ STATIC_URL }}img/logos/pulitzer-center-green.png" alt="Pulitzer Center"/>
+        </a>
+
+        <br/><br/>
+        <a href="https://www.netwerk24.com/landbou/" target="_blank" rel="noopener noreferrer">
+          <img src="{{ STATIC_URL }}img/logos/landbou-green.png" alt="Landbou" style="max-height: 50px;"/>
+        </a>
+        <a href="https://www.netwerk24.com/za/rapport/" target="_blank" rel="noopener noreferrer">
+          <img src="{{ STATIC_URL }}img/logos/rapport-green.png" alt="Rapport" style="max-height: 50px;"/>
         </a>
         <a href="https://city-press.news24.com/" target="_blank" rel="noopener noreferrer">
-          <img src="{{ STATIC_URL }}img/logos/citypress.png" alt="City Press"/>
+          <img src="{{ STATIC_URL }}img/logos/citypress-green.png" alt="City Press"/>
         </a>
-        <a href="https://city-press.news24.com/News/land-cleveage-and-conflict-20180621" target="_blank" rel="noopener noreferrer">
-          <img src="{{ STATIC_URL }}img/logos/ourland.png" alt="Our Land / Ons Grond"/>
-        </a>
+        
       </div>
   </div>
 </div>
