--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -346,6 +346,42 @@
                 data-source-link="http://www.ruraldevelopment.gov.za/publications/land-audit-report/file/6126"></div>
             </div>
         </section>
+        <section class="clearfix stat-row">
+            <div class="column-half">
+              <div id="chart-pie-land_audit_2013-land_distribution_gender"
+                data-stat-type="percentage"
+                data-chart-title="Private Land Distribution by Gender"
+                data-initial-sort="-value"
+                data-source-title="Land Audit Report, 2013"
+                data-source-link="http://www.ruraldevelopment.gov.za/phocadownload/Cadastral-Survey-management/Booklet/land%20audit%20booklet.pdf"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-pie-land_audit_2013-land_ownership"
+                data-stat-type="percentage"
+                data-chart-title="Private Land Vs. State Land"
+                data-initial-sort="-value"
+                data-source-title="Land Audit Report, 2013"
+                data-source-link="http://www.ruraldevelopment.gov.za/phocadownload/Cadastral-Survey-management/Booklet/land%20audit%20booklet.pdf"></div>
+             </div>
+        </section>
+                <section class="clearfix stat-row">
+            <div class="column-half">
+              <div id="chart-pie-land_audit_2013-land_user_dist"
+                data-stat-type="percentage"
+                data-chart-title="Land Users"
+                data-initial-sort="-value"
+                data-source-title="Land Audit Report, 2013"
+                data-source-link="http://www.ruraldevelopment.gov.za/phocadownload/Cadastral-Survey-management/Booklet/land%20audit%20booklet.pdf"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-pie-land_audit_2013-land_use_dist"
+                data-stat-type="percentage"
+                data-chart-title="Land Use"
+                data-initial-sort="-value"
+                data-source-title="Land Audit Report, 2013"
+                data-source-link="http://www.ruraldevelopment.gov.za/phocadownload/Cadastral-Survey-management/Booklet/land%20audit%20booklet.pdf"></div>
+             </div>
+        </section>
       </div>
   </article>
 {% endif %}
